[gd_scene load_steps=6 format=2]

[ext_resource path="res://Player.gd" type="Script" id=1]
[ext_resource path="res://StateMachine/StandingState.gd" type="Script" id=2]
[ext_resource path="res://StateMachine/DashState.gd" type="Script" id=3]

[sub_resource type="CapsuleMesh" id=1]

[sub_resource type="SGRectangleShape2D" id=2]

[node name="Player" type="Spatial" groups=["network_sync"]]
script = ExtResource( 1 )

[node name="MeshInstance" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0 )
mesh = SubResource( 1 )
material/0 = null

[node name="FixedPlayerCollision" type="SGKinematicBody2D" parent="."]

[node name="SGCollisionShape2D" type="SGCollisionShape2D" parent="FixedPlayerCollision"]
shape = SubResource( 2 )

[node name="StateList" type="Node" parent="."]

[node name="STANDING_STATE" type="Node" parent="StateList"]
script = ExtResource( 2 )

[node name="DASH_STATE" type="Node" parent="StateList"]
script = ExtResource( 3 )
